# lfr

./: .gitignore  Cargo.toml  README.md  common.nix  default.nix  rustfmt.toml  shell.nix
crates/cg/: Cargo.toml
crates/cg/src/: lib.rs
crates/lfr/: Cargo.toml
crates/lfr-base-db/: Cargo.toml
crates/lfr-base-db/src/: lib.rs
crates/lfr-db/: Cargo.toml
crates/lfr-db/src/: lib.rs
crates/lfr-hir/: Cargo.toml
crates/lfr-hir-def/: Cargo.toml
crates/lfr-hir-def/src/: db.rs  hir.rs  intern.rs  lib.rs  lower_syntax.rs
crates/lfr-hir-def/src/hir/: field.rs  type_ref.rs
crates/lfr-hir-def/src/intern/: struct.rs  type_ref.rs
crates/lfr-hir/src/: lib.rs
crates/lfr-parser/: Cargo.toml
crates/lfr-parser/src/: lexer.rs  lib.rs  parser.rs
crates/lfr-parser/src/parser/: error.rs  event.rs  marker.rs  text_token_source.rs  text_tree_sink.rs  token_source.rs  tree_sink.rs
crates/lfr-stdx/: Cargo.toml
crates/lfr-stdx/src/: lib.rs
crates/lfr-syntax/: Cargo.toml  lfr.ungram
crates/lfr-syntax/src/: ast.rs  lib.rs  span.rs  syntax_kind.rs
crates/lfr-syntax/src/syntax_kind/: generated.rs
crates/lfr-vfs/: Cargo.toml
crates/lfr-vfs/src/: lib.rs
crates/lfr/src/: main.rs  panic_handler.rs
crates/parser/: Cargo.toml
crates/parser/src/: lexer.rs  lib.rs  parser.rs
crates/parser/src/parser/: error.rs  event.rs  marker.rs  text_token_source.rs  text_tree_sink.rs  (+2 more)
crates/syntax/: Cargo.toml  lfr.ungram
crates/syntax/src/: ast.rs  lib.rs  span.rs  syntax_kind.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: ast_src.rs  gen_syntax.rs  lib.rs  main.rs
(+1 files in other folders)
