[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
flate2 = "1.0"
pico-args = "0.4.2"
proc-macro2 = "1.0.8"
quote = "1.0.2"
ungrammar = "1.1.3"
walkdir = "2.3.1"
write-json = "0.1.0"
xshell = "0.1"
clap = "3.0.0-beta.5"
itertools = "0.10"

cg = { path = "../cg" }
